--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 }
 .wrapper{
     display: flex;   
+    
 }
 
 /*-----left column-----*/
@@ -112,7 +113,6 @@ body{
     text-transform: uppercase;
     padding-left: 20px;
 }
-
 .mobile-menu {
     display: flex;
     align-items: center;
@@ -133,7 +133,7 @@ body{
 }
 /*----drop down menu-----*/
 .drop-down{
-    display: none;
+    display: flex;
     background: rgba(0, 0, 0, 0.73);
     width: 324px;
     height: 500px;
@@ -143,7 +143,9 @@ body{
     border-radius:3px;
     padding-top: 10px;   
     z-index: 10; 
-    opacity: 50%;    
+    opacity: 50%;  
+    transform: translate(100%);  
+    overflow-y:hidden;   
 }
 .drop-down i{
 padding-left: 30px;
